@@ -68,6 +68,7 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - x2goclient.pro{,.maemo}: reference new pulsemanager.{cpp,h} files.
     - macbuild.sh: add new MACPORTS_PREFIX detection/variable.
     - macbuild.sh: add new dependency_error() helper function.
+    - macbuild.sh: add new lazy_canonical_path() helper function.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
